SA-28 child issue SA-32 bottom margin visible removed

--- a/components/tailored/core/media/user/User.less
+++ b/components/tailored/core/media/user/User.less
@@ -1,13 +1,13 @@
 .user {
   background: @primary-color;
-  width: 16rem;
-  aspect-ratio: 16/9;
+  width: 12rem;
+  height: 6rem;
   border-radius: @corner-rounding;
   display: inline-flex;
-  margin: 0.5rem 0.25rem;
+  margin: 0.25rem 0.25rem;
   padding: 0.5rem;
   position: relative;
-  transition: all .1s;
+  transition: all 0.1s;
 
   .circle {
     position: absolute;
@@ -26,12 +26,12 @@
       transform: scale(0.95);
       box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.7);
     }
-  
+
     70% {
       transform: scale(1);
       box-shadow: 0 0 0 10px rgba(0, 0, 0, 0);
     }
-  
+
     100% {
       transform: scale(0.95);
       box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
@@ -47,7 +47,8 @@
 @media only screen and (max-width: 768px) {
   .user {
     height: 7rem;
-    .circle, .talking {
+    .circle,
+    .talking {
       top: calc(50% - 30px);
     }
     .tag {
